Fix alignments of homepage icons and boxes on mobile and tablet sized devices.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -1,7 +1,6 @@
 
 
 .container {
-	min-width: 300px;
 	max-width: 1220px;
 	margin: 0 auto;
 	background: white;
